[package]
name = "oranc"
authors = [ "Lin Yinfeng <lin.yinfeng@outlook.com>" ]
version = "0.1.0"
edition = "2021"
license = "MIT"
description = """
OCI Registry As Nix Cache
"""

[dependencies]
warp = "*"
# wait for warp with hyper and http 1.0
hyper = "0"
http = "0"
reqwest = "0.11"
oci-distribution = "0.10"
clap = { version = "*", features = [ "cargo", "derive" ] }
clap_complete = "*"
tokio = {version = "*", features = [ "macros", "rt-multi-thread" ] }
futures = "*"
tokio-util = {version = "*", features = [ ] }
log = "*"
pretty_env_logger = "*"
thiserror = "*"
regex = "*"
once_cell = "*"
data-encoding = "*"
async-tar = "*"
maplit = "*"
bytes = "*"
rusqlite = "*"
nix-nar = "*"
zstd = "*"
nix-base32 = "*"
sha2 = "*"
tempfile = "*"
ed25519-compact = "*"
urlencoding = "*"
